Fix url field text not centered in IE11

--- a/styles/sass/partials/_fields.scss
+++ b/styles/sass/partials/_fields.scss
@@ -22,7 +22,7 @@ textarea.upfront-field-text.upfront-field-textarea {
 	padding: 0px 10px;
 	font-size: 11px;
 	font-family: verdana, sans-serif;
-	line-height: 26px;
+	line-height: 1;
 }
 input.upfront-field-text.upfront-has_inline_label {
 	width: auto;
